--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: LiteAnnouncer
-version: 1.3.1.0
+version: 1.3.1.3
 author: TRCStudioDean
 main: studio.trc.bukkit.liteannouncer.Main
 api-version: 1.13
+folia-supported: true
 softdepend: [PlaceholderAPI]
 commands:
     la:
